fix(container): iframe container overflow
ref: MANAGER-9221

--- a/packages/manager/apps/container/src/container/nav-reshuffle/template.module.scss
+++ b/packages/manager/apps/container/src/container/nav-reshuffle/template.module.scss
@@ -35,6 +35,7 @@ $z-index-sidebar: 7;
 .iframeContainer {
   flex-grow: 1;
   position: relative;
+  overflow: hidden;
 
   iframe {
     width: 100%;
